[project]
name = "blackbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.18",
    "ipython>=9.5.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "plotly-express>=0.4.1",
]
